tests/type_args_fatal_assertion_regression/type_args_fatal_assertion_regression.exp
Error ------------------------------------------------------------- test.js:10:5

Cannot use `V` with more than 1 type argument.

Error: test.js:10
 10: (x: V);
         ^ Cannot use `V` [1] with more than 1 type argument.
  References:
    7: class T<U> {}
               ^ [1]: `V`

Error ------------------------------------------------------------- test.js:12:2

Cannot cast `42` to empty because number is incompatible with empty.

Error: test.js:12
 12: (42: empty); // Error: number ~> empty
      ^^ Cannot cast `42` to empty because number [1] is incompatible with empty [2].
  References:
   12: (42: empty); // Error: number ~> empty
        ^^ [1]: number
   12: (42: empty); // Error: number ~> empty
            ^^^^^ [2]: empty


Found 2 errors
